Update code to better support starfinder